# dcs_asset_processor

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CI.yml
dcs_asset_processor/: Assets.py  util_shared.py
docs/: modules.rst  python_package.dcs_asset_processor.rst  python_package.rst
origin/: Pipfile
origin/dcs_asset_processor/: __init__.py  util_archive.py
src/dcs_asset_processor/: util_google.py
tests/: conftest.py  test_methods.py
