[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dcs_asset_processor"
authors = [{ name = "Milos Kaurin", email = "milos.kaurin@proton.me" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/Kaurin/dcs_asset_processor"
